# checkm8

./: .gitignore  README.md  SPEC.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py  sections_router.py
backend/app/attachments/: router.py  service.py
backend/app/auth/: dependencies.py  google.py  router.py
backend/app/lists/: router.py  service.py
backend/app/nodes/: router.py  service.py
backend/app/sharing/: router.py  service.py
backend/app/ws/: manager.py  router.py
backend/tests/: conftest.py  test_auth.py  test_lists.py  test_nodes.py  test_sharing.py
cli/: CHECKM8_SKILL.md  CLAUDE.md  pyproject.toml
cli/checkm8_cli/: client.py  cmd_auth.py  cmd_import.py  cmd_item.py  cmd_list.py  cmd_note.py  cmd_section.py  cmd_share.py  config.py  main.py  output.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: attachments.ts  auth.ts  client.ts  lists.ts  nodes.ts  sharing.ts
frontend/src/components/: AppShell.tsx  AuthCallback.tsx  ClaimPage.tsx  ItemDetailPanel.tsx  ListSettingsDialog.tsx  ListSidebar.tsx  LoginPage.tsx  NodeRow.tsx  PresenceBar.tsx  SectionAutocomplete.tsx  ShareDialog.tsx  Toast.tsx  TokensPage.tsx  TreeView.tsx
frontend/src/hooks/: useAuth.tsx  useGlobalWebSocket.ts  useMomentumScroll.ts  useTree.ts  useUndoRedo.ts  useVisualViewport.ts  useWebSocket.ts
frontend/src/lib/: parseLinks.ts  tree.ts
(+1 files in other folders)
